syntax = "proto3";

option csharp_namespace = "Saas.gRPC";

package Services;

import "Protos/common.proto";
import "Protos/entities.proto";

service RestaurantSvc {
  rpc Get (Common.Int) returns (Entities.Restaurants.Restaurant);
  rpc Lookup (Common.String) returns (Entities.Restaurants);
  rpc Create (Entities.Restaurants.Restaurant) returns (Common.Int);
  rpc Update (Entities.Restaurants.Restaurant) returns (Common.Int);
  rpc Delete (Common.Int) returns (Common.Int);
}
service TableSvc {
  rpc Get (Common.Int) returns (Entities.Tables.Table);
  rpc GetByRestaurant (Common.Int) returns (Entities.Tables);
  rpc Create (Entities.Tables.Table) returns (Common.Int);
  rpc Update (Entities.Tables.Table) returns (Common.Bool);
  rpc Delete (Common.Int) returns (Common.Bool);  
}
service ItemSvc {
  rpc Get (Common.Int) returns (Entities.Items.Item);
  rpc GetByRestaurant (Common.Int) returns (Entities.Items);
  rpc GetByMenuDetail (Common.Int) returns (Entities.Items);
  rpc Create (Entities.Items.Item) returns (Common.Int);
  rpc Update (Entities.Items.Item) returns (Common.Int);
}
service RestaurantMenuSvc {
  rpc Get (Common.Int) returns (Entities.RestaurantMenus.RestaurantMenu);
  rpc GetByRestaurant (Common.Int) returns (Entities.RestaurantMenus);
  rpc Create (Entities.RestaurantMenus.RestaurantMenu) returns (Common.Int);
  rpc Update (Entities.RestaurantMenus.RestaurantMenu) returns (Common.Int);
  rpc Delete (Common.Int) returns (Common.Int);
}
service MenuSvc {
  rpc Get (Common.Int) returns (Entities.Menus.Menu);
  rpc GetByRestaurantMenu (Common.Int) returns (Entities.Menus);
  rpc Create (Entities.Menus.Menu) returns (Common.Int);
  rpc Update (Entities.Menus.Menu) returns (Common.Int);
  rpc Delete (Common.Int) returns (Common.Int);
}
service MenuItemSvc {
  rpc Get (Common.Int) returns (Entities.MenuItems.MenuItem);  
  rpc GetByMenu (Common.Int) returns (Entities.MenuItems);
  rpc GetByItem (Common.Int) returns (Entities.MenuItems);
  rpc GetByMenuAndItem (Entities.MenuItemIds) returns (Entities.MenuItems);
  rpc Create (Entities.MenuItems.MenuItem) returns (Common.Int);
  rpc Delete (Common.Int) returns (Common.Int);
}
service AppDataSvc {
	rpc Languages (Common.Empty) returns (Entities.Languages);
  rpc States (Common.Empty) returns (Entities.States);
}